[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/entities/lasers/LaserGun.tscn" type="PackedScene" id=1]
[ext_resource path="res://models/bosses/boss3.glb" type="PackedScene" id=2]
[ext_resource path="res://scenes/entities/bosses/Multishot.gd" type="Script" id=3]

[sub_resource type="ConcavePolygonShape" id=1]
data = PoolVector3Array( -0.5, -0.0916, 0.7661, -1, -0.0916, -0.3924, -1, -0.0916, 0.2661, -1, -0.0916, -0.3924, 0.8586, -0.0916, -0.5339, -0.8586, -0.0916, -0.5339, 0.8586, -0.0916, -0.5339, 1, -0.0916, 0.2661, 1, -0.0916, -0.3924, 1, -0.0916, 0.2661, -0.5, -0.0916, 0.7661, 0.5, -0.0916, 0.7661, -0.5, -0.0916, 0.7661, 0.8586, -0.0916, -0.5339, -1, -0.0916, -0.3924, 0.8586, -0.0916, -0.5339, -0.5, -0.0916, 0.7661, 1, -0.0916, 0.2661, -0.9, 0.0584, -0.3657, -0.45, 0.0584, 0.677, -0.9, 0.0584, 0.227, -0.45, 0.0584, 0.677, 0.9, 0.0584, 0.227, 0.45, 0.0584, 0.677, 0.9, 0.0584, 0.227, 0.7727, 0.0584, -0.493, 0.9, 0.0584, -0.3657, 0.7727, 0.0584, -0.493, -0.9, 0.0584, -0.3657, -0.7727, 0.0584, -0.493, -0.9, 0.0584, -0.3657, 0.9, 0.0584, 0.227, -0.45, 0.0584, 0.677, 0.9, 0.0584, 0.227, -0.9, 0.0584, -0.3657, 0.7727, 0.0584, -0.493, -0.8586, -0.0916, -0.5339, -1.1248, -0.0084, -0.3924, -1, -0.0916, -0.3924, -0.8586, -0.0916, -0.5339, -0.8586, -0.0068, -0.6773, -1.1248, -0.0084, -0.3924, 0.7727, 0.0584, -0.493, 1.0248, 0.1416, -0.3657, 0.9, 0.0584, -0.3657, 0.7727, 0.0584, -0.493, 0.7727, 0.1432, -0.6365, 1.0248, 0.1416, -0.3657, 0.8586, -0.0916, -0.5339, 1.1248, -0.0084, -0.3924, 0.8586, -0.0068, -0.6773, 0.8586, -0.0916, -0.5339, 1, -0.0916, -0.3924, 1.1248, -0.0084, -0.3924, -0.7727, 0.0584, -0.493, -1.0248, 0.1416, -0.3657, -0.7727, 0.1432, -0.6365, -0.7727, 0.0584, -0.493, -0.9, 0.0584, -0.3657, -1.0248, 0.1416, -0.3657, -0.7727, 0.0584, -0.493, 0.7727, 0.1432, -0.6365, 0.7727, 0.0584, -0.493, -0.7727, 0.0584, -0.493, -0.7727, 0.1432, -0.6365, 0.7727, 0.1432, -0.6365, 0.5, -0.0916, 0.7661, 0.8664, -0.0835, 0.3347, 1, -0.0916, 0.2661, 0.5, -0.0916, 0.7661, 0.5664, -0.0835, 0.6347, 0.8664, -0.0835, 0.3347, -1, -0.0916, -0.3924, -1.1248, -0.0084, 0.2661, -1, -0.0916, 0.2661, -1, -0.0916, -0.3924, -1.1248, -0.0084, -0.3924, -1.1248, -0.0084, 0.2661, -1, -0.0916, 0.2661, -0.5664, -0.0835, 0.6347, -0.5, -0.0916, 0.7661, -1, -0.0916, 0.2661, -0.8664, -0.0835, 0.3347, -0.5664, -0.0835, 0.6347, 0.5, -0.0916, 0.7661, 0.27, 0.008, 0.6604, 0.45, 0.0584, 0.677, 0.5, -0.0916, 0.7661, 0.3, -0.082, 0.7139, 0.27, 0.008, 0.6604, -1.0248, 0.1416, -0.3657, -1.1414, 0.0568, -0.2278, -1.1248, -0.0084, -0.3924, -1.0248, 0.1416, -0.3657, -1.0914, 0.1318, -0.2144, -1.1414, 0.0568, -0.2278, -0.9, 0.0584, 0.227, -1.0248, 0.1416, -0.3657, -0.9, 0.0584, -0.3657, -0.9, 0.0584, 0.227, -1.0248, 0.1416, 0.227, -1.0248, 0.1416, -0.3657, -1.1248, -0.0084, 0.2661, -1.0097, -0.052, 0.2192, -1, -0.0916, 0.2661, -1.1248, -0.0084, 0.2661, -1.0846, -0.0021, 0.2192, -1.0097, -0.052, 0.2192, 1.0248, 0.1416, 0.227, 1.1414, 0.0568, 0.1015, 1.1248, -0.0084, 0.2661, 1.0248, 0.1416, 0.227, 1.0914, 0.1318, 0.0819, 1.1414, 0.0568, 0.1015, 1, -0.0916, 0.2661, 1.1248, -0.0084, -0.3924, 1, -0.0916, -0.3924, 1, -0.0916, 0.2661, 1.1248, -0.0084, 0.2661, 1.1248, -0.0084, -0.3924, 0.9, 0.0584, -0.3657, 1.0248, 0.1416, 0.227, 0.9, 0.0584, 0.227, 0.9, 0.0584, -0.3657, 1.0248, 0.1416, -0.3657, 1.0248, 0.1416, 0.227, 1, -0.0916, 0.2661, 1.0846, -0.0021, 0.2192, 1.1248, -0.0084, 0.2661, 1, -0.0916, 0.2661, 1.0097, -0.052, 0.2192, 1.0846, -0.0021, 0.2192, 1.1414, 0.0568, -0.2278, 1.0914, 0.1318, 0.0819, 1.0914, 0.1318, -0.2144, 1.1414, 0.0568, -0.2278, 1.1414, 0.0568, 0.1015, 1.0914, 0.1318, 0.0819, 1.0248, 0.1416, -0.3657, 1.0914, 0.1318, 0.0819, 1.0248, 0.1416, 0.227, 1.0248, 0.1416, -0.3657, 1.0914, 0.1318, -0.2144, 1.0914, 0.1318, 0.0819, 1.1248, -0.0084, -0.3924, 1.0914, 0.1318, -0.2144, 1.0248, 0.1416, -0.3657, 1.1248, -0.0084, -0.3924, 1.1414, 0.0568, -0.2278, 1.0914, 0.1318, -0.2144, 1.1248, -0.0084, 0.2661, 1.1414, 0.0568, -0.2278, 1.1248, -0.0084, -0.3924, 1.1248, -0.0084, 0.2661, 1.1414, 0.0568, 0.1015, 1.1414, 0.0568, -0.2278, -1.1414, 0.0568, -0.2278, -1.0914, 0.1318, 0.0819, -1.1414, 0.0568, 0.1015, -1.1414, 0.0568, -0.2278, -1.0914, 0.1318, -0.2144, -1.0914, 0.1318, 0.0819, -1.0248, 0.1416, 0.227, -1.0914, 0.1318, -0.2144, -1.0248, 0.1416, -0.3657, -1.0248, 0.1416, 0.227, -1.0914, 0.1318, 0.0819, -1.0914, 0.1318, -0.2144, -1.1248, -0.0084, 0.2661, -1.0914, 0.1318, 0.0819, -1.0248, 0.1416, 0.227, -1.1248, -0.0084, 0.2661, -1.1414, 0.0568, 0.1015, -1.0914, 0.1318, 0.0819, -1.1248, -0.0084, -0.3924, -1.1414, 0.0568, 0.1015, -1.1248, -0.0084, 0.2661, -1.1248, -0.0084, -0.3924, -1.1414, 0.0568, -0.2278, -1.1414, 0.0568, 0.1015, -1.0248, 0.1416, 0.227, -1.0846, -0.0021, 0.2192, -1.1248, -0.0084, 0.2661, -1.0248, 0.1416, 0.227, -1.0246, 0.0879, 0.1957, -1.0846, -0.0021, 0.2192, -1, -0.0916, 0.2661, -0.9497, 0.038, 0.1957, -0.9, 0.0584, 0.227, -1, -0.0916, 0.2661, -1.0097, -0.052, 0.2192, -0.9497, 0.038, 0.1957, -0.9, 0.0584, 0.227, -1.0246, 0.0879, 0.1957, -1.0248, 0.1416, 0.227, -0.9, 0.0584, 0.227, -0.9497, 0.038, 0.1957, -1.0246, 0.0879, 0.1957, 0.9, 0.0584, 0.227, 1.0097, -0.052, 0.2192, 1, -0.0916, 0.2661, 0.9, 0.0584, 0.227, 0.9497, 0.038, 0.1957, 1.0097, -0.052, 0.2192, 1.0248, 0.1416, 0.227, 0.9497, 0.038, 0.1957, 0.9, 0.0584, 0.227, 1.0248, 0.1416, 0.227, 1.0246, 0.0879, 0.1957, 0.9497, 0.038, 0.1957, 1.1248, -0.0084, 0.2661, 1.0246, 0.0879, 0.1957, 1.0248, 0.1416, 0.227, 1.1248, -0.0084, 0.2661, 1.0846, -0.0021, 0.2192, 1.0246, 0.0879, 0.1957, -0.5, -0.0916, 0.7661, 0.3, -0.082, 0.7139, 0.5, -0.0916, 0.7661, -0.5, -0.0916, 0.7661, -0.3, -0.082, 0.7139, 0.3, -0.082, 0.7139, 0.45, 0.0584, 0.677, -0.27, 0.008, 0.6604, -0.45, 0.0584, 0.677, 0.45, 0.0584, 0.677, 0.27, 0.008, 0.6604, -0.27, 0.008, 0.6604, -0.45, 0.0584, 0.677, -0.3, -0.082, 0.7139, -0.5, -0.0916, 0.7661, -0.45, 0.0584, 0.677, -0.27, 0.008, 0.6604, -0.3, -0.082, 0.7139, -0.45, 0.0584, 0.677, -0.8064, 0.0065, 0.3112, -0.9, 0.0584, 0.227, -0.45, 0.0584, 0.677, -0.5364, 0.0065, 0.5812, -0.8064, 0.0065, 0.3112, -0.5, -0.0916, 0.7661, -0.5364, 0.0065, 0.5812, -0.45, 0.0584, 0.677, -0.5, -0.0916, 0.7661, -0.5664, -0.0835, 0.6347, -0.5364, 0.0065, 0.5812, -0.9, 0.0584, 0.227, -0.8664, -0.0835, 0.3347, -1, -0.0916, 0.2661, -0.9, 0.0584, 0.227, -0.8064, 0.0065, 0.3112, -0.8664, -0.0835, 0.3347, 0.9, 0.0584, 0.227, 0.5364, 0.0065, 0.5812, 0.45, 0.0584, 0.677, 0.9, 0.0584, 0.227, 0.8064, 0.0065, 0.3112, 0.5364, 0.0065, 0.5812, 1, -0.0916, 0.2661, 0.8064, 0.0065, 0.3112, 0.9, 0.0584, 0.227, 1, -0.0916, 0.2661, 0.8664, -0.0835, 0.3347, 0.8064, 0.0065, 0.3112, 0.45, 0.0584, 0.677, 0.5664, -0.0835, 0.6347, 0.5, -0.0916, 0.7661, 0.45, 0.0584, 0.677, 0.5364, 0.0065, 0.5812, 0.5664, -0.0835, 0.6347, -0.8586, -0.0068, -0.6773, 0.7727, 0.1432, -0.6365, -0.7727, 0.1432, -0.6365, -0.8586, -0.0068, -0.6773, 0.8586, -0.0068, -0.6773, 0.7727, 0.1432, -0.6365, 0.8586, -0.0916, -0.5339, -0.8586, -0.0068, -0.6773, -0.8586, -0.0916, -0.5339, 0.8586, -0.0916, -0.5339, 0.8586, -0.0068, -0.6773, -0.8586, -0.0068, -0.6773, -1.0248, 0.1416, -0.3657, -0.8586, -0.0068, -0.6773, -0.7727, 0.1432, -0.6365, -1.0248, 0.1416, -0.3657, -1.1248, -0.0084, -0.3924, -0.8586, -0.0068, -0.6773, 1.0248, 0.1416, -0.3657, 0.8586, -0.0068, -0.6773, 1.1248, -0.0084, -0.3924, 1.0248, 0.1416, -0.3657, 0.7727, 0.1432, -0.6365, 0.8586, -0.0068, -0.6773, -1.0097, -0.052, 0.2192, -1.0246, 0.0879, 0.1957, -0.9497, 0.038, 0.1957, -1.0097, -0.052, 0.2192, -1.0846, -0.0021, 0.2192, -1.0246, 0.0879, 0.1957, 0.9497, 0.038, 0.1957, 1.0846, -0.0021, 0.2192, 1.0097, -0.052, 0.2192, 0.9497, 0.038, 0.1957, 1.0246, 0.0879, 0.1957, 1.0846, -0.0021, 0.2192, -0.3, -0.082, 0.7139, 0.27, 0.008, 0.6604, 0.3, -0.082, 0.7139, -0.3, -0.082, 0.7139, -0.27, 0.008, 0.6604, 0.27, 0.008, 0.6604, -0.8664, -0.0835, 0.3347, -0.5364, 0.0065, 0.5812, -0.5664, -0.0835, 0.6347, -0.8664, -0.0835, 0.3347, -0.8064, 0.0065, 0.3112, -0.5364, 0.0065, 0.5812, 0.5664, -0.0835, 0.6347, 0.8064, 0.0065, 0.3112, 0.8664, -0.0835, 0.3347, 0.5664, -0.0835, 0.6347, 0.5364, 0.0065, 0.5812, 0.8064, 0.0065, 0.3112 )

[node name="Multishot" type="Area"]
script = ExtResource( 3 )

[node name="LaserTimer" type="Timer" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1.5, 0, 0, 0, 1.5, 0, 0, 0, 1.5, 0, 0, 0 )
shape = SubResource( 1 )

[node name="Boss" parent="." instance=ExtResource( 2 )]

[node name="Cannon1" parent="Boss" instance=ExtResource( 1 )]
transform = Transform( 0.707107, 0, -0.707107, 0, 1, 0, 0.707107, 0, 0.707107, -1.2, 0, 0.8 )
show_cannon = false

[node name="Cannon2" parent="Boss" instance=ExtResource( 1 )]
transform = Transform( 0.707107, 0, 0.707107, 0, 1, 0, -0.707107, 0, 0.707107, 1.2, 0, 0.8 )
show_cannon = false

[node name="Cannon3" parent="Boss" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1.3 )
show_cannon = false

[node name="Cannon4" parent="Boss" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.55, 0, 0.6 )
show_cannon = false
follow_player = true

[node name="Cannon5" parent="Boss" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.55, 0, 0.6 )
show_cannon = false
follow_player = true

[connection signal="timeout" from="LaserTimer" to="." method="_on_LaserTimer_timeout"]
